        a warning (previously an error).
        
   o    When setkey coerces a numeric or character column, it
        no longer makes a copy of the whole table, FR#1744. Thanks
        to an investigation by DM.
        
   o    New function setkeyv(DT,v) (v stands for vector) replaces
        key(DT)<-v syntax. Also added setattr() and setnames(). All
        documented in ?copy. 

        
USER VISIBLE CHANGES

   o    The loc argument of setkey has been removed. This wasn't very
        useful and didn't warrant a period of deprecation.
        
   o    datatable.alloccol has been removed. That warning is now
        controlled by datatable.verbose=TRUE. One option is easer.
        

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.7   **
        **                                         **
        *********************************************

BUG FIXES

   o    Previous bug fix for random crash in R <= 2.13.2
        related to truelength and over-allocation didn't
        work, 3rd attempt. Thanks to Chris Neff for his
        patience and testing. This has shown up consistently
        as error status on CRAN old-rel checks (windows and
        mac). So if they pass, this issue is fixed.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.6   **
        **                                         **
        *********************************************

NEW FEATURES

   o    An empty list column can now be added with :=, and
        data.table() accepts empty list().
            DT[,newcol:=list()]
            data.table(a=1:3,b=list())
        Empty list columns contain NULL for all rows.
        
BUG FIXES

   o    Adding a column to a data.table loaded from disk could
        result in a memory corruption in R <= 2.13.2, revealed